--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>To Do List</title>
-  </head>
-  <body>
+<%- include('./partials/header') %>
+
     <h1> Test </h1>
-  </body>
-</html>
+
+<%- include('./partials/footer') %>
