--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <%- include('./partials/header') %>
 
-    <h1> Test </h1>
+    <form action = '/' method = 'POST'>
+      <textarea name = 'content' rows = '10' cols = '70'>
+      </textarea>
+      <input type = 'submit' value = 'Submit'> </input>
+
+    </form>
 
 <%- include('./partials/footer') %>
