Linked the database files to welcome.js while also allowing output on the index.ejx file.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,4 +7,10 @@
 
     </form>
 
+    <% for (task of tasks) { %>
+      <div>
+        <p> <%=task.content%></p>
+      </div>
+      <% } %>
+
 <%- include('./partials/footer') %>
